# ultimate-mod-man-rs

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  plan.txt  rustfmt.toml
cli/: Cargo.toml
cli/src/: cli_user_input_delegate.rs  main.rs  prog_args.rs  stats.rs
core/: Cargo.toml
core/src/: in_prog_action.rs  lib.rs  mod_db.rs  mod_manager.rs  mod_name_resolver.rs
core/src/cmds/: add.rs  status.rs
lib/: Cargo.toml
lib/src/: banana_scraper.rs  lib.rs  mod_db.rs  mod_manager.rs  mod_name_resolver.rs
lib/src/cmds/: add.rs  mod.rs  status.rs
scraper/: Cargo.toml
scraper/src/: banana_scraper.rs  download_artifact_parser.rs  lib.rs  mod_file_classifier.rs  scraper.rs  types.rs  utils.rs
scraper/tests/: banana_endpoint_tests.rs
utils/: Cargo.toml
utils/src/: lib.rs  types.rs  user_input_delegate.rs  utils.rs
