[package]
name = "ultimate-mod-man-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
log = "0.4.22"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
ultimate-mod-man-rs-core = { path = "../core" }
ultimate-mod-man-rs-utils = { path = "../utils" }
