[package]
name = "ultimate-mod-man-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
lockfile = "0.4.0"
log = "0.4.22"
ptree = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
toml = "0.8.19"
