[package]
name = "ultimate-mod-man-rs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1.1.9", features = ["serde", "serde1"] }
chrono = { version = "0.4.39", features = ["serde"] }
lockfile = "0.4.0"
log = "0.4.22"
ptree = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
toml = "0.8.19"
ultimate-mod-man-rs-utils = { path = "../utils" }
ultimate-mod-man-rs-scraper = { path = "../scraper" }