[package]
name = "ultimate-mod-man-rs-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
ultimate-mod-man-rs-utils = { path = "../utils" }

float-ord = "0.3.2"
log = "0.4.25"
reqwest = "0.12.12"
rust-fuzzy-search = "0.1.1"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "test-util"] }
