[package]
name = "ultimate-mod-man-rs-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1.1.9", features = ["serde"] }
float-ord = "0.3.2"
infer = "0.16.0"
log = "0.4.25"
md5 = "0.7.0"
reqwest = "0.12.12"
rust-fuzzy-search = "0.1.1"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
ultimate-mod-man-rs-utils = { path = "../utils" }
unrar = "0.5.7"
zip = "2.2.2"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "test-util"] }
